==> 8bitgeek/caribou-rtos/caribou++/target/chip/stellaris/lm3s8962/src/cuart_device.cpp <==
#include "cuart_device.h"
#include "inc/hw_types.h"
#include "inc/hw_memmap.h"
#include "inc/hw_sysctl.h"
#include "inc/hw_uart.h"
#include "inc/hw_gpio.h"
#include "driverlib/uart.h"
#include "driverlib/sysctl.h"
#include "driverlib/gpio.h"
#include "driverlib/pin_map.h"
#define DEFAULT_RX_BUFFERSZ	128
#define DEFAULT_TX_BUFFERSZ	128
#define UART_INTERRUPTS				(UART_INT_TX | UART_INT_RX | UART_INT_RT)
	#define inherited CUart_Interface

	void CUart_Device::irq(InterruptVector v)
	{
		uint32_t ulStatus = status(true); /* get the interrupt status */
		clear(ulStatus);				/* clear the interrupt pending flags */

		/* See if there is space in the transmit FIFO while we have data to transmit */
		while( !txBuffer().empty() && !(HWREG(base() + UART_O_FR) & UART_FR_TXFF) )
		{
			HWREG(base() + UART_O_DR) = txBuffer().remove();	/* Write this character to the transmit FIFO. */
		}

		while ( !(HWREG(base() + UART_O_FR) & UART_FR_RXFE) )
		{
			rxBuffer().insert(HWREG(base() + UART_O_DR));
		}
		//wakeup();
	}

	void CUart_Device::uartTX(uint8_t ch)
	{
		disableInt(UART_INTERRUPTS);
		if ( !(HWREG(base() + UART_O_FR) & UART_FR_TXFF) )
		{
			/* restart transmitter interrupt stream */
			HWREG(base() + UART_O_DR) = !txBuffer().empty() ? txBuffer().remove(ch) : ch;
			enableInt(UART_INTERRUPTS);
		}
		else
		{
			enableInt(UART_INTERRUPTS);
			while( txBuffer().full() ) {}
			txBuffer().insert(ch);
		}
	}

	bool CUart_Device::uartTxReady()
	{
		/* Return the availability of characters. */
		return ((HWREG(base() + UART_O_FR) & UART_FR_TXFF) ? false : true);

	}

	bool CUart_Device::uartRXReady()
	{
		/* Return the availability of characters. */
		return ((HWREG(base() + UART_O_FR) & UART_FR_RXFE) ? false : true);
	}

	void CUart_Device::setBaud(uint32_t baud)
	{
		uint32_t ulBaud;
		uint32_t ulConfig;
		getConfig(&ulBaud,&ulConfig);
		setConfig(clock(),baud,ulConfig);
	}

	uint32_t CUart_Device::baud()
	{
		uint32_t ulBaud;
		uint32_t ulConfig;
		getConfig(&ulBaud,&ulConfig);
		return ulBaud;
	}

	void CUart_Device::setMode(uint32_t mode)
	{
		uint32_t ulBaud;
		uint32_t ulConfig;
		getConfig(&ulBaud,&ulConfig);
		setConfig(clock(),ulBaud,mode);
	}

	uint32_t CUart_Device::mode()
	{
		uint32_t ulBaud;
		uint32_t ulConfig;
		getConfig(&ulBaud,&ulConfig);
		return ulConfig;
	}

	void CUart_Device::enable()
	{
		//
		// Enable the FIFO.
		//
		HWREG(base() + UART_O_LCRH) |= UART_LCRH_FEN;

		//
		// Enable RX, TX, and the UART.
		//
		HWREG(base() + UART_O_CTL) |= (UART_CTL_UARTEN | UART_CTL_TXE | UART_CTL_RXE);

	}

	void CUart_Device::disable()
	{
		//
		// Wait for end of TX.
		//
		//while(HWREG(base() + UART_O_FR) & UART_FR_BUSY)
		//{
		//	yield();
		//}

		//
		// Disable the FIFO.
		//
		HWREG(base() + UART_O_LCRH) &= ~(UART_LCRH_FEN);

		//
		// Disable the UART.
		//
		HWREG(base() + UART_O_CTL) &= ~(UART_CTL_UARTEN | UART_CTL_TXE | UART_CTL_RXE);
	}
