==> 8bitgeek/caribou-rtos/caribou-rtos/caribou++/target/chip/stm32/stm32f051/src/cuart_device.cpp <==
#include "cuart.h"
#define DEFAULT_RX_BUFFERSZ	16
#define DEFAULT_TX_BUFFERSZ	16
	#define inherited CUart_Interface

	void CUart_Device::irq(InterruptVector v)
	{
		int rx=0;
		int tx=0;
		uint32_t st = status(true);
		/* See if there is space in the transmit FIFO while we have data to transmit */
		driver_vector_disable(v);
		//driver_interrupts_disable();
		while ( *(volatile uint8_t*)mLSR & U0LSR_RDR )
		{
			rxBuffer().insert( *(volatile uint8_t*)mRBR );
			++rx;
		}
		while( !txBuffer().empty() && *(volatile uint8_t*)mLSR & U0LSR_THRE )
		{
			*(volatile uint8_t*)mTHR = txBuffer().remove();	/* Write this character to the transmit FIFO. */
			++tx;
		}
		//driver_interrupts_enable();
		driver_vector_enable(v);
		if ( rx ) rxHint(rx);
		if ( tx ) txHint(tx);
	}

	void CUart_Device::setBaud(uint32_t baud)
	{
		USART_InitStructure.USART_BaudRate            = baud;
		USART_InitStructure.USART_WordLength          = USART_WordLength_8b;
		USART_InitStructure.USART_StopBits            = USART_StopBits_1;
		USART_InitStructure.USART_Parity              = USART_Parity_No ;
		USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
		USART_InitStructure.USART_Mode                = USART_Mode_Rx | USART_Mode_Tx;
		USART_Init(mBase, &USART_InitStructure);
	}

	uint32_t CUart_Device::baud()
	{
		uint32_t currentBaud;
		uint32_t currentMode;
		getConfig(&currentBaud,&currentMode);
		return currentBaud;
	}

	void CUart_Device::setMode(uint32_t mode)
	{
		uint32_t currentBaud;
		uint32_t currentMode;
		getConfig(&currentBaud,&currentMode);
		setConfig(clock(),currentBaud,mode);
	}

	uint32_t CUart_Device::mode()
	{
		uint32_t currentBaud;
		uint32_t currentMode;
		getConfig(&currentBaud,&currentMode);
		return currentMode;
	}

	void CUart_Device::uartTX(uint8_t ch)
	{
		driver_vector_disable(vector());
		if ( uartTxReady() )
		{
			/* restart transmitter interrupt stream */
			*(volatile uint8_t*)mTHR = !txBuffer().empty() ? txBuffer().remove(ch) : ch;
		}
		else
		{
			driver_vector_enable(vector());
			while( txBuffer().full() ) {}
			txBuffer().insert(ch);
		}
		driver_vector_enable(vector());
	}

	bool CUart_Device::uartTxReady()
	{
		return *(volatile uint8_t*)mLSR & U0LSR_THRE;
	}

	bool CUart_Device::uartRXReady()
	{
		return *(volatile uint8_t*)mLSR & U0LSR_RDR;
	}

	void CUart_Device::enable()
	{
		USART_Cmd(mBase, ENABLE); // Enable USART
		dtrOn();
	}

	void CUart_Device::disable()
	{
		dtrOff();
		USART_Cmd(mBase, DISABLE); // Enable USART
	}
